[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/entity/ProjectileBase.gd" type="Script" id=1]
[ext_resource path="res://nodes/entity/Hitbox.tscn" type="PackedScene" id=2]

[node name="Area2D" type="Area2D"]
pause_mode = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 2 )]

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="damage_dealt" from="Hitbox" to="." method="_on_Hitbox_damage_dealt"]
